Revision history for {{$dist->name}}

{{$NEXT}}

0.05      2022-09-12 21:31:18 -0600
  - Add default favicon.ico

0.04      2022-09-12 21:11:58 -0600
  - Added default templates
  - Added $xor->site_links method
  - Added XOR::Link class

0.03      2022-09-11 04:02:40 -0600
  - Added docs_root for use with nginx, apache etc.
  - Make org optional for no POD

0.02      2022-08-27 07:16:44 -0600
  - /pod/index.json will have sorted keys to reduce churn
  - The A<AUTHOR> tag can now include text A<text|AUTHOR>
  - Added XOR->pods->add_sister_site method

0.01      2022-08-26 23:02:01 -0600
  - initial version

