@@ -19,7 +19,8 @@ workflow = linux
 
 [Prereqs]
 Plack::App::GitHubPages::Faux = 0.02
-Plack::Builder = 0
+Plack::Middleware::Headers    = 0
+Plack::Builder                = 0
 
 [Author::Plicease::Core]
 
