@@ -56,7 +56,7 @@ package XOR::Builder {
           'use Plack::Builder;',
           'use Plack::App::GitHubPages::Faux;',
           'builder {',
-          '  enable "XOR::NoCache";',
+          '  enable "Headers", set => ["cache-control" => "no-cache"];',
           "  Plack::App::GitHubPages::Faux->new( root => \"$docs_root\" )->to_app;",
           '};',
         )
